Fix divider color in dark mode

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -437,4 +437,8 @@ img.cardheader {
     hr.cardheader {
       border: 1px solid lightgray;
     }
+
+    h1.divider {
+      background-color: #222
+    }
   }
